libcontentaction (0.1.34~unreleased) unstable; urgency=low

  *

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 29 Oct 2010 08:53:45 +0300

libcontentaction (0.1.33) unstable; urgency=low

  * QT_NO_KEYWORDS
  * Configuration update: regexp for phone number
  * Fixes: NB#191300
  * Don't use QDBusInterface when triggering D-Bus actions (workaround, QTBUG-14485)
  
 -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 28 Oct 2010 13:59:32 +0300

libcontentaction (0.1.32) unstable; urgency=low

  * Doc update.
  * Making regexps case-insensitive.

 -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 07 Oct 2010 10:23:24 +0300

libcontentaction (0.1.31) unstable; urgency=low

  * Storing regexps in order; enables prioritizing specific ones over generic ones.
  * Added missing _aegis file for tests

 -- Marja Hassinen <marja.hassinen@nokia.com>  Wed, 29 Sep 2010 09:18:23 +0300

libcontentaction (0.1.30) unstable; urgency=low

  * Configuration update: regexp for ovi music urls
  * Re-reading mimeinfo.cache

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 24 Sep 2010 14:53:02 +0300

libcontentaction (0.1.29) unstable; urgency=low

  * Fixes: NB#191392
  * Fixes: NB#191945
  * Configuration update: e-mail address regexps
  * Fixes: NB#191957
  
 -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 23 Sep 2010 10:37:25 +0300

libcontentaction (0.1.28) unstable; urgency=low

  * Added 2 Action::launcherAction functions.

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 17 Sep 2010 13:17:13 +0300

libcontentaction (0.1.27) unstable; urgency=low

  * Fixes: NB#192179
  * Merging the highlighter tool hl1 into lca-tool (lca-tool --highlight)
  
 -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 16 Sep 2010 11:53:09 +0300

libcontentaction (0.1.26) unstable; urgency=low

  * Fixes: NB#191945

 -- Marja Hassinen <marja.hassinen@nokia.com>  Wed, 15 Sep 2010 10:14:26 +0300

libcontentaction (0.1.25) unstable; urgency=low

  * Fixes: NB#191791
