@@ -1,6 +1,7 @@
 libcontentaction (0.1.34~unreleased) unstable; urgency=low
 
-  *
+  * Configuration update: regexp for phone number
+  * Fixes: NB#191300
 
  -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 29 Oct 2010 08:53:45 +0300
 
